--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY bgcolor=pink>
-  <h1>Maven Project is completed<h1><br>
+  <h1>TVSCS Project is completed<h1><br>
   <a href="login.html">Login</a><br>
   <a href="register.html">Register</a><br>
 </BODY>
